syntax = "proto3";

package engine;

service EngineService {
  // Workflow instance management
  rpc StartWorkflow(StartWorkflowRequest) returns (StartWorkflowResponse);
  rpc GetWorkflowInstance(GetWorkflowInstanceRequest) returns (GetWorkflowInstanceResponse);
  rpc ListWorkflowInstances(ListWorkflowInstancesRequest) returns (ListWorkflowInstancesResponse);
  rpc TriggerTransition(TriggerTransitionRequest) returns (TriggerTransitionResponse);
  rpc CancelWorkflow(CancelWorkflowRequest) returns (CancelWorkflowResponse);
  
  // Worker management
  rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse);
  rpc GetWorkerStatus(GetWorkerStatusRequest) returns (GetWorkerStatusResponse);
  
  // Task monitoring
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
}

// Start a workflow instance
message StartWorkflowRequest {
  string workflow_definition_id = 1;
  string input_json = 2; // JSON-encoded input data
}

message StartWorkflowResponse {
  string instance_id = 1;
  string current_state = 2;
  string status = 3;
}

// Get workflow instance details
message GetWorkflowInstanceRequest {
  string instance_id = 1;
}

message GetWorkflowInstanceResponse {
  WorkflowInstance instance = 1;
}

message WorkflowInstance {
  string id = 1;
  string definition_id = 2;
  string current_state = 3;
  string status = 4;
  string context_json = 5; // JSON-encoded context
  string created_at = 6;
  string updated_at = 7;
  optional string completed_at = 8;
}

// List workflow instances
message ListWorkflowInstancesRequest {
  optional string status_filter = 1; // Filter by status
  int32 limit = 2;
  int32 offset = 3;
}

message ListWorkflowInstancesResponse {
  repeated WorkflowInstance instances = 1;
  int32 total_count = 2;
}

// Trigger a state transition
message TriggerTransitionRequest {
  string instance_id = 1;
  string event = 2;
}

message TriggerTransitionResponse {
  bool success = 1;
  string new_state = 2;
  optional string error = 3;
}

// Cancel a workflow
message CancelWorkflowRequest {
  string instance_id = 1;
}

message CancelWorkflowResponse {
  bool success = 1;
  optional string error = 2;
}

// List workers
message ListWorkersRequest {}

message ListWorkersResponse {
  repeated Worker workers = 1;
}

message Worker {
  string id = 1;
  repeated string capabilities = 2;
  string hostname = 3;
  string status = 4;
  WorkerStats stats = 5;
  string registered_at = 6;
  string last_heartbeat = 7;
}

message WorkerStats {
  int32 active_tasks = 1;
  string total_tasks_completed = 2;
  string total_tasks_failed = 3;
}

// Get worker status
message GetWorkerStatusRequest {
  string worker_id = 1;
}

message GetWorkerStatusResponse {
  Worker worker = 1;
}

// Get task status
message GetTaskStatusRequest {
  string task_id = 1;
}

message GetTaskStatusResponse {
  Task task = 1;
}

message Task {
  string id = 1;
  string workflow_id = 2;
  string status = 3;
  optional string assigned_worker = 4;
  int32 attempt = 5;
  string created_at = 6;
  optional string started_at = 7;
  optional string completed_at = 8;
  optional TaskResult result = 9;
}

message TaskResult {
  bool success = 1;
  bytes output = 2;
  optional string error = 3;
  string execution_time_ms = 4;
}
